--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -22,5 +22,23 @@
 	},
 	"manufacturer": "Shure",
 	"products": ["SCM820"],
-	"keywords": ["Mixer"]
+	"keywords": ["Mixer"],
+	"bonjourQueries": {
+		"bonjour_host": [
+			{
+				"type": "shure",
+				"protocol": "tcp",
+				"txt": {
+					"model": "SCM820-DAN"
+				}
+			},
+			{
+				"type": "shure",
+				"protocol": "tcp",
+				"txt": {
+					"model": "SCM820"
+				}
+			}
+		]
+	}
 }
